--- a/src/empresa/Interfaz_generar_venta.form
+++ b/src/empresa/Interfaz_generar_venta.form
@@ -281,6 +281,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_nombre_cliente">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_nombre_clienteKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
@@ -303,6 +306,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_numero_documento">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txt_numero_documentoKeyTyped"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane2">
       <AuxValues>
